# Mopo-arrow_sqlite

./: 01_Create_Databases.ipynb  02_Get_DB_Info.ipynb  03_Metadata_Test.ipynb  Pipfile  README.md  binary_cols.py  flake.nix  pyproject.toml  requirements.txt  utils.py
arrow_expts/: utils.py
arrow_expts/jsonfn/: README.md
arrow_expts/schema/: json-blob-schema.json  models.py  reencode.py
arrow_expts/spine/: README.md  dbmap.py
data/databases/: arrow_concatenated.sqlite  direct_sqlite.sqlite  foreign_test.sqlite  recreated_sqlite_then_arrow.sqlite  sample.sqlite  spineopt-tutorial.sqlite
databases/: arrow_concatenated.sqlite  arrow_consecutive.sqlite  direct_sqlite.sqlite  recreated.sqlite  recreated_sqlite_then_arrow.sqlite  sample.sqlite
databases/spine_iterations/: 01_create_db.sqlite  08_add_relationship.sqlite  09_add_parameter_to_fuel_node.sqlite  10_commit_many_changes.sqlite  12_commit_add_parameter_to_relationship.sqlite
json_func/: readdb.py
nb/: 01_Create_Databases.ipynb  04_Foreign_Key_Error.ipynb
schema/: dbmap.py  json-blob-schema.json  models.py  reencode.py
schema/json/: array.durations.json  array.numbers.json  array.strings.json  date-time.json  duration.integer.json  map.two-column-array.json  time-series.one-column-array.json  time-series.two-column-array-named-indices.json  (+1 more)
spinedbapi/: README.md  dbmap.py  insert_reencoded.py  read_map_timeseries.py  recipes.py
sql_scripts/: 01.sql  02.sql  03.sql  04.sql  05.sql  06.sql  07.sql  08.sql  09.sql  10.sql  11.sql  12.sql  14.sql  16.sql  create_tables.sql  foreign_test.sql
(+19 files in other folders)
