[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arrow-expts"
version = "0.1.dev"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"  # easier type hints, pattern matching
dependencies = [
     "adbc_driver_manager",
     "adbc_driver_sqlite",
     "pandas",
     "pyarrow",
     "pydantic",
     "pytest",
     "rich",
     "spinedb-api",
     "sqlalchemy",
]

[tool.hatch.metadata.source]
include = ["arrow_expts"]
exclude = ["data", "sql_scripts", "bin"]

[tool.hatch.metadata.packages.find]
where = ["arrow_expts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-q", "-ra"]

[tool.black]
include = '\.pyi?$'
extend-exclude ='''
(
  ^test/data
)
'''

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
