[project]
name = "arrow-sql-expts"
version = "0.1.dev"
requires-python = ">=3.10"  # easier type hints, pattern matching
dependencies = [
     "adbc_driver_manager",
     "adbc_driver_sqlite",
     "pandas",
     "pyarrow",
     "pydantic",
     "pytest",
     "rich",
     "spinedb-api",
     "sqlalchemy",
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
